--- a/SuperAPI/SuperAPI/SuperAPI.csproj
+++ b/SuperAPI/SuperAPI/SuperAPI.csproj
@@ -209,6 +209,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\HackerNewsAPIServices.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
