Added aljazeera services to hit aj API

--- a/SuperAPI/SuperAPI/SuperAPI.csproj
+++ b/SuperAPI/SuperAPI/SuperAPI.csproj
@@ -206,10 +206,12 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\AljazeeraStoryModel.cs" />
     <Compile Include="Models\HackerNewsStoryModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\AljazeeraAPIServices.cs" />
     <Compile Include="Services\HackerNewsAPIServices.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
