Aljazeera tab up and functional

--- a/SuperAPI/SuperAPI/SuperAPI.csproj
+++ b/SuperAPI/SuperAPI/SuperAPI.csproj
@@ -199,6 +199,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AljazeeraNewsController.cs" />
     <Compile Include="Controllers\HackerNewsStoryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -273,6 +274,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\HackerNewsStory\Index.cshtml" />
+    <Content Include="Views\AljazeeraNews\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
