AP services, controller and view added and working to hit API

--- a/SuperAPI/SuperAPI/SuperAPI.csproj
+++ b/SuperAPI/SuperAPI/SuperAPI.csproj
@@ -200,6 +200,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AljazeeraNewsController.cs" />
+    <Compile Include="Controllers\ApNewsController.cs" />
     <Compile Include="Controllers\BbcNewsController.cs" />
     <Compile Include="Controllers\HackerNewsStoryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -209,12 +210,14 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AljazeeraStoryModel.cs" />
+    <Compile Include="Models\APStoryModel.cs" />
     <Compile Include="Models\BBCStoryModel.cs" />
     <Compile Include="Models\HackerNewsStoryModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AljazeeraAPIServices.cs" />
+    <Compile Include="Services\ApApiServices.cs" />
     <Compile Include="Services\BBCApiServices.cs" />
     <Compile Include="Services\HackerNewsAPIServices.cs" />
     <Compile Include="Startup.cs" />
@@ -279,6 +282,7 @@
     <Content Include="Views\HackerNewsStory\Index.cshtml" />
     <Content Include="Views\AljazeeraNews\Index.cshtml" />
     <Content Include="Views\BbcNews\Index.cshtml" />
+    <Content Include="Views\ApNews\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
