--- a/SuperAPI/SuperAPI/SuperAPI.csproj
+++ b/SuperAPI/SuperAPI/SuperAPI.csproj
@@ -205,6 +205,7 @@
     <Compile Include="Controllers\HackerNewsStoryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\WsjNewsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -215,11 +216,13 @@
     <Compile Include="Models\HackerNewsStoryModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\WsjNewsModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AljazeeraAPIServices.cs" />
     <Compile Include="Services\ApApiServices.cs" />
     <Compile Include="Services\BBCApiServices.cs" />
     <Compile Include="Services\HackerNewsAPIServices.cs" />
+    <Compile Include="Services\WsjApiServices.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -283,6 +286,7 @@
     <Content Include="Views\AljazeeraNews\Index.cshtml" />
     <Content Include="Views\BbcNews\Index.cshtml" />
     <Content Include="Views\ApNews\Index.cshtml" />
+    <Content Include="Views\WsjNews\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
