added custom.js and javascript marquee to show current date/time

--- a/SuperAPI/SuperAPI/SuperAPI.csproj
+++ b/SuperAPI/SuperAPI/SuperAPI.csproj
@@ -243,7 +243,10 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Properties\PublishProfiles\jeffnewsapi - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\jeffnewsapi - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\Custom.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
